--- a/styles.css
+++ b/styles.css
@@ -92,7 +92,8 @@ body {
 }
 
 .link-3::before {
-  background-image: url('icono3.png'); /* Asegúrate de que este archivo exista en tu proyecto */
+  background-image: url('icono3.png');
+  border-radius: 8px /* Asegúrate de que este archivo exista en tu proyecto */
 }
 
 .link-3 {
